--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
 
           <center>
             <a class="brand" href="/sales">
-              <%= image_tag 'Logo_Website_v2.png', :height => 34, :width => 180 %>
+              <%= image_tag 'V_Logo_Website.png', :height => 34, :width => 180 %>
             </a>
           </center>
 		
