Adding Image Upload Back

--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -48,8 +48,8 @@ function submitFilter() {
       <% end %>
     </span>
 
-    <a href="<%= my_faves_url %>">
-      <%= image_tag "favescript3.png", :width => 73, :height => 22, :class => "faves-script" %>
+    <a href="<%= my_faves_url %>" class="faves-script">
+      What's New
     </a>
 
     <div id="filter-section" class="filter-section">	
