--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 
           <div class="nav-collapse collapse">
             <form class="form-search" action="/search_results">
-              <input type="text" name="q" value="<%= params[:q] %>" data-provide="typeahead" class="input-medium search-query" placeholder="Search by Brand">
+              <input type="text" name="q" value="<%= params[:q] %>" data-provide="typeahead" class="input-medium search-query" placeholder="Search by Company">
             </form>
           </div>
 
@@ -55,9 +55,9 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="<%= new_sale_url %>">Upload</a></li>
+							<li><a href="<%= edit_user_url("self") %>">Account</a></li>
               <li><a href="/page/about">About Us</a></li>
-              <li><a href="/stores">Retailers</a></li>
-              <li><a href="<%= edit_user_url("self") %>">Profile</a></li>
+              <li><%= link_to "Blog", "http://www.valydation.tumblr.com", :target => "_blank" %></li>
             </ul>
           </div><!--/.nav-collapse -->
 
