Adding New Stuff Page

--- a/app/views/sales/_sale_li.html.erb
+++ b/app/views/sales/_sale_li.html.erb
@@ -15,7 +15,7 @@
     <span class="thisInfo">
     </span>
     <div class="hover-toggle">
-      <center><span class="percentoff"><%= (sale.percent_off.to_f).round %>% Off</span></center>
+      <center><span class="percentoff"><%= sale.product %></span></center>
     </div>
   </div>
 </div>
