--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -48,7 +48,7 @@ function submitFilter() {
       <% end %>
     </span>
 
-    <a href="<%= my_faves_url %>" class="faves-script">
+    <a href="/featured/new-stuff" class="faves-script">
       What's New
     </a>
 
