Adding Purple Footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,10 +69,9 @@
     <%= yield %>
 
     <div id="footer">
-	    
 		    <medium>
-	        &copy;<%= link_to "Valydation 2013", "http://mysaletable.com" %> | <a href="/page/faq-shoppers">FAQ</a> | <a href="/page/tos">Terms of Service</a> | <a href="/page/privacy">Privacy</a></p>
-	      </medium>
+	       <font color="#ffffff"> <p>&copy;<%= link_to "Valydation 2013", "http://mysaletable.com" %> | <a href="/page/faq-shoppers">FAQ</a> | <a href="/page/tos">Terms of Service</a> | <a href="/page/privacy">Privacy</a></p>
+	     </font> </medium>
 	    </div>
 	 
 
