--- a/app/assets/stylesheets/jess.css
+++ b/app/assets/stylesheets/jess.css
@@ -822,9 +822,17 @@ width: 62px;
      
       #footer {
         margin-top: 20px;
-		background-color: #F5F5F5;
+		background-color: #432060;
 		padding:35px;
+		color:white;
+	p { color:white !important;
+	}
+		
       }
+
+#footer a {
+	color:white !important;
+}
 
 
 .marketing-edit {
