Putting back photo upload

--- a/app/views/sales/new.html.erb
+++ b/app/views/sales/new.html.erb
@@ -135,7 +135,7 @@ $(document).ready(function () {
     if (validateForm()) {
       $('#uploady')[0].disabled = true      
       $('#uploady')[0].innerHTML = "Uploading..."
-      $('#sale_form').submit();
+      $('#image_0_form').submit();
     }
   });
 
