--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,13 +48,14 @@
 
           <center>
             <a class="brand" href="/sales">
-              <%= image_tag 'V_Logo_Website.png', :height => 34, :width => 180 %>
+              <%= image_tag 'valydation_logo.png', :height => 34, :width => 180 %>
             </a>
           </center>
 		
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="<%= new_sale_url %>">Upload</a></li>
+              <% if @user.is_merchant %><li><a href="<%= new_sale_url %>">Upload</a></li><% end %>
+              <li><a href=#>Customer Care</a></li>
 							<li><a href="<%= edit_user_url("self") %>">Account</a></li>
               <li><a href="/page/about">About Us</a></li>
               <li><%= link_to "Blog", "http://www.valydation.tumblr.com", :target => "_blank" %></li>
